--- a/Bintangku.WebApi/wwwroot/styles.css
+++ b/Bintangku.WebApi/wwwroot/styles.css
@@ -3427,6 +3427,12 @@ video {
   border-width: 0;
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgba(50, 50, 50, var(--tw-bg-opacity));
@@ -3435,6 +3441,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
 .bg-gray-500 {
@@ -3502,6 +3513,11 @@ video {
   background-color: rgba(60, 90, 153, var(--tw-bg-opacity));
 }
 
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
@@ -3518,9 +3534,29 @@ video {
   --tw-bg-opacity: 0.6;
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgba(50, 50, 50, var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
 .border-blue-100 {
   --tw-border-opacity: 1;
   border-color: rgba(102, 203, 255, var(--tw-border-opacity));
+}
+
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(93, 159, 226, var(--tw-border-opacity));
+}
+
+.focus\:border-gray-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 
 .focus\:border-indigo-500:focus {
@@ -3530,6 +3566,10 @@ video {
 
 .border-opacity-50 {
   --tw-border-opacity: 0.5;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-xl {
@@ -3648,6 +3688,10 @@ video {
   height: 0.5rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -3684,9 +3728,18 @@ video {
   height: 100vh;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .list-outside {
@@ -3695,10 +3748,6 @@ video {
 
 .list-disc {
   list-style-type: disc;
-}
-
-.m-0 {
-  margin: 0px;
 }
 
 .mx-2 {
@@ -3766,12 +3815,16 @@ video {
   margin-top: 1.25rem;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
 .mb-9 {
@@ -3819,12 +3872,25 @@ video {
   opacity: 1;
 }
 
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .p-4 {
   padding: 1rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .py-2 {
@@ -3835,6 +3901,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-3 {
@@ -3909,6 +3980,10 @@ video {
 
 .pl-7 {
   padding-left: 1.75rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .pt-9 {
@@ -4029,6 +4104,18 @@ video {
   --tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
 }
 
+.fill-current {
+  fill: currentColor;
+}
+
+.table-auto {
+  table-layout: auto;
+}
+
+.table-fixed {
+  table-layout: fixed;
+}
+
 .text-center {
   text-align: center;
 }
@@ -4065,9 +4152,24 @@ video {
   color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
+.text-red-900 {
+  --tw-text-opacity: 1;
+  color: rgba(255, 0, 0, var(--tw-text-opacity));
+}
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgba(93, 159, 226, var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 
 .text-blue-700 {
@@ -4105,6 +4207,14 @@ video {
   text-transform: capitalize;
 }
 
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.whitespace-pre-line {
+  white-space: pre-line;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -4113,16 +4223,16 @@ video {
   width: 0.5rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-9 {
   width: 2.25rem;
 }
 
 .w-11 {
   width: 2.75rem;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-20 {
@@ -4143,6 +4253,10 @@ video {
 
 .w-0\.5 {
   width: 0.125rem;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-1\/3 {
@@ -4518,6 +4632,14 @@ input {
 
   .md\:block {
     display: block;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
   }
 }
 
