--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -23,14 +23,16 @@
       <div class="flex relative justify-between">
         <div class="inline-flex items-center flex-col">
           <div class="w-0.5 bg-blue-500 h-24"></div>
-          <button
+          <a
+            routerLink="/home"
+            fragment="visi-kami"
             mat-fab
             color="primary"
             title="Lihat Lebih Lanjut"
             aria-label="Lihat Lebih Lanjut"
           >
             <mat-icon>arrow_downward</mat-icon>
-          </button>
+          </a>
         </div>
         <div class="inline-flex">
           <div class="flex absolute right-0" style="top: -88px">
