--- a/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
+++ b/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
@@ -24,7 +24,7 @@
         class="hidden md:block md:space-x-8"
       >
         <a
-          [routerLink]="['/home']"
+          routerLink="/home"
           routerLinkActive="active"
           class="font-medium text-gray-500 hover:text-blue-700"
         >
@@ -58,25 +58,33 @@
         class="hidden md:block md:space-x-8"
       >
         <a
-          [routerLink]="['/home']"
+          routerLink="home"
+          [routerLinkActiveOptions]="iSactive"
+          routerLinkActive="text-blue-500 font-bold"
           class="font-medium text-gray-500 hover:text-blue-700"
           >Beranda</a
         >
         <a
-          [routerLink]="['/home']"
+          routerLink="home"
           fragment="visi-kami"
+          [routerLinkActiveOptions]="iSactive"
+          routerLinkActive="text-blue-500 font-bold"
           class="font-medium text-gray-500 hover:text-blue-700"
           >Misi</a
         >
         <a
-          [routerLink]="['/home']"
+          routerLink="/home"
           fragment="layanan-kami"
+          [routerLinkActiveOptions]="iSactive"
+          routerLinkActive="text-blue-500 font-bold"
           class="font-medium text-gray-500 hover:text-blue-700"
           >Layanan</a
         >
         <a
-          [routerLink]="['/home']"
+          routerLink="home"
           fragment="tentang-kami"
+          [routerLinkActiveOptions]="iSactive"
+          routerLinkActive="text-blue-500 font-bold"
           class="font-medium text-gray-500 hover:text-blue-700"
           >Tentang</a
         >
