--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -148,7 +148,7 @@
                 <div class="pl-7">
                   <div class="mat-typography">
                     <h3 class="text-blue-700 font-bold">
-                      Cara {{ item.title }}
+                      {{ item.title }}
                     </h3>
                     <p class="opacity-60 text-justify">
                       {{ item.desc }}
@@ -290,17 +290,8 @@
             class="btn-auth"
             routerLinkActive="router-link-active"
           >
-            gabung sekarang
+            donasi sekarang
           </a>
-          <p></p>
-          <p>
-            Sudah bergabung?
-            <a
-              class="text-blue-500 hover:text-blue-700"
-              [routerLink]="['/login']"
-              >Login</a
-            >
-          </p>
         </div>
         <div app-grid item="true" xs="2">
           <div class="absolute top-0">
